# advent-of-code

./: README.md  build.gradle.kts
gleam/: gleam.toml  manifest.toml
gleamlang/src/year_2021/: day_01.gleam
gleamlang/test/year_2021/: day_01_test.gleam
go/: 202101_test.go  202501.go  202501_test.go  202502.go  202502_test.go  day01.go  day01_test.go
haskell/: haskell.cabal
haskell/app/: Main.hs
haskell/tests/: BasicSumTest.hs
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/y2019/: Day02.kt  DayIntcode.kt
kotlin/src/main/kotlin/y2021/: Day01.kt  Day02.kt  Day03.kt  Day08.kt  Day09.kt  Day10.kt
kotlin/src/main/kotlin/y2022/: Day02.kt  Day03.kt  Day04.kt  Day09.kt  Day10.kt
kotlin/src/main/kotlin/y2023/: Day02.kt  Day06.kt  Day07.kt  Day09.kt
kotlin/src/test/kotlin/y2019/: Day02.kt  Day05.kt  Day07.kt
rust/src/: lib.rs  y2021_d01.rs  y2021_d02.rs
rust/tests/: day01.rs  y2021_d01.rs  y2021_d02.rs
src/main/kotlin/y2021/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt
src/main/kotlin/y2022/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt
src/main/kotlin/y2023/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt
src/test/kotlin/y2021/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day06.kt  Day07.kt  Day08.kt  Day09.kt  Day10.kt
src/test/kotlin/y2022/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day07.kt  Day09.kt
src/test/kotlin/y2023/: Day01.kt  Day02.kt  Day03.kt  Day04.kt  Day05.kt  Day07.kt  Day08.kt
(+29 files in other folders)
