cabal-version:      3.0
name:               haskell
version:            0.1.0.0

executable haskell
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   app
    default-language: Haskell2010

library haskell-lib
    exposed-modules:  BasicSum
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   lib
    default-language: Haskell2010

test-suite tests
    type: exitcode-stdio-1.0
    main-is: BasicSumTest.hs
    build-depends: base ^>=4.17.2.1, HUnit ^>=1.6, haskell-lib
    hs-source-dirs: tests
    default-language: Haskell2010
